<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/movieContainer"
    android:padding="0dp"
    android:layout_margin="0dp"
    tools:context="com.example.maria.cinema.fragments.FragmentMovieDetails">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/movieDetailsContainer"
        android:layout_margin="0dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/moviePoster"
            android:layout_gravity="fill_vertical|center_horizontal"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieTitleLabel"
            android:id="@+id/movieTitle"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieCastLabel"
            android:id="@+id/movieCast"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_now"
            android:id="@+id/movieBookTicketsBtn"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_title"
            android:id="@+id/movieProgramTitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="0dp"
        android:id="@+id/cinemasOnScreenList"
        android:layout_alignParentLeft="true"
        android:layout_toEndOf="@+id/hiddenTextView"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/movieDetailsContainer"
        >

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text=""
        android:id="@+id/hiddenTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>